@@ -1,0 +1,6 @@
+<?xml version="1.0" encoding="utf-8" standalone="yes"?>
+<settings>
+   <category   label="30000">
+      <setting label="30001" type="slider" id="sr_nice" default="0" range="0,1,20" option="int" />
+   </category>
+</settings>
